# gitviz

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
gitviz/: cli.py
gitviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gitviz/analytics/: contributors.py  stats.py
gitviz/core/: commits.py  repo.py
tests/: conftest.py  test_commits.py  test_contributors.py  test_repo.py  test_stats.py
